# openwilma-rs

./: .gitignore  Cargo.toml  TODO.md
src/: client.rs  lib.rs  parser.rs  utils.rs
src/wilma/: exam.rs  group.rs  mod.rs  overview.rs  user.rs
src/wilma/schedule/: mod.rs  reservation.rs  term.rs
